--- a/StudyProject/appsettings.json
+++ b/StudyProject/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySqlConnection": "Database = studyproject; Data Source = localhost; User Id=root;"
+    "MySqlConnection": "server=localhost;port=3306;database=studyproject;user=root;"
   }
 }
